@@ -11,7 +11,6 @@ import com.fasterxml.jackson.databind.JsonNode;
 import com.google.common.annotations.VisibleForTesting;
 import com.google.common.base.Charsets;
 import com.google.common.collect.ImmutableSet;
-import com.google.common.collect.Lists;
 import com.google.common.hash.HashFunction;
 import com.google.common.hash.Hashing;
 import io.airbyte.api.model.generated.CatalogDiff;
@@ -53,9 +52,11 @@ import io.airbyte.commons.server.handlers.helpers.AutoPropagateSchemaChangeHelpe
 import io.airbyte.commons.server.handlers.helpers.AutoPropagateSchemaChangeHelper.UpdateSchemaResult;
 import io.airbyte.commons.server.handlers.helpers.CatalogConverter;
 import io.airbyte.commons.server.handlers.helpers.JobCreationAndStatusUpdateHelper;
+import io.airbyte.commons.server.handlers.helpers.NotificationHelper;
 import io.airbyte.commons.server.scheduler.EventRunner;
 import io.airbyte.commons.server.scheduler.SynchronousResponse;
 import io.airbyte.commons.server.scheduler.SynchronousSchedulerClient;
+import io.airbyte.commons.server.support.CurrentUserService;
 import io.airbyte.commons.temporal.ErrorCode;
 import io.airbyte.commons.temporal.TemporalClient.ManualOperationResult;
 import io.airbyte.commons.version.Version;
@@ -63,8 +64,6 @@ import io.airbyte.config.ActorCatalog;
 import io.airbyte.config.ActorDefinitionVersion;
 import io.airbyte.config.DestinationConnection;
 import io.airbyte.config.JobTypeResourceLimit.JobType;
-import io.airbyte.config.Notification.NotificationType;
-import io.airbyte.config.NotificationItem;
 import io.airbyte.config.NotificationSettings;
 import io.airbyte.config.ResourceRequirements;
 import io.airbyte.config.ScopeType;
@@ -74,7 +73,6 @@ import io.airbyte.config.StandardCheckConnectionOutput;
 import io.airbyte.config.StandardDestinationDefinition;
 import io.airbyte.config.StandardSourceDefinition;
 import io.airbyte.config.StandardSync;
-import io.airbyte.config.StandardSyncOperation;
 import io.airbyte.config.StandardWorkspace;
 import io.airbyte.config.WorkloadPriority;
 import io.airbyte.config.helpers.ResourceRequirementsUtils;
@@ -85,10 +83,13 @@ import io.airbyte.config.persistence.StreamResetPersistence;
 import io.airbyte.config.persistence.domain.StreamRefresh;
 import io.airbyte.config.secrets.SecretsRepositoryWriter;
 import io.airbyte.config.secrets.persistence.RuntimeSecretPersistence;
+import io.airbyte.data.services.ConnectionTimelineEventService;
 import io.airbyte.data.services.SecretPersistenceConfigService;
 import io.airbyte.data.services.WorkspaceService;
+import io.airbyte.data.services.shared.FinalStatusEvent;
+import io.airbyte.data.services.shared.ManuallyStartedEvent;
+import io.airbyte.featureflag.DiscoverPostprocessInTemporal;
 import io.airbyte.featureflag.FeatureFlagClient;
-import io.airbyte.featureflag.FieldSelectionWorkspaces.UseNewSchemaUpdateNotification;
 import io.airbyte.featureflag.Organization;
 import io.airbyte.featureflag.UseRuntimeSecretPersistence;
 import io.airbyte.featureflag.Workspace;
@@ -96,12 +97,6 @@ import io.airbyte.metrics.lib.MetricAttribute;
 import io.airbyte.metrics.lib.MetricClientFactory;
 import io.airbyte.metrics.lib.MetricTags;
 import io.airbyte.metrics.lib.OssMetricsRegistry;
-import io.airbyte.notification.CustomerioNotificationClient;
-import io.airbyte.notification.SlackNotificationClient;
-import io.airbyte.notification.messages.ConnectionInfo;
-import io.airbyte.notification.messages.SchemaUpdateNotification;
-import io.airbyte.notification.messages.SourceInfo;
-import io.airbyte.notification.messages.WorkspaceInfo;
 import io.airbyte.persistence.job.JobCreator;
 import io.airbyte.persistence.job.JobNotifier;
 import io.airbyte.persistence.job.JobPersistence;
@@ -109,6 +104,7 @@ import io.airbyte.persistence.job.WebUrlHelper;
 import io.airbyte.persistence.job.factory.OAuthConfigSupplier;
 import io.airbyte.persistence.job.factory.SyncJobFactory;
 import io.airbyte.persistence.job.models.Job;
+import io.airbyte.persistence.job.models.JobStatus;
 import io.airbyte.persistence.job.tracker.JobTracker;
 import io.airbyte.protocol.models.AirbyteCatalog;
 import io.airbyte.protocol.models.ConnectorSpecification;
@@ -116,13 +112,13 @@ import io.airbyte.protocol.models.StreamDescriptor;
 import io.airbyte.validation.json.JsonSchemaValidator;
 import io.airbyte.validation.json.JsonValidationException;
 import jakarta.inject.Singleton;
+import jakarta.validation.Valid;
 import jakarta.validation.constraints.NotNull;
 import java.io.IOException;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
-import java.util.stream.Collectors;
 import lombok.extern.slf4j.Slf4j;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -162,7 +158,10 @@ public class SchedulerHandler {
   private final ConnectorDefinitionSpecificationHandler connectorDefinitionSpecificationHandler;
   private final WorkspaceService workspaceService;
   private final SecretPersistenceConfigService secretPersistenceConfigService;
+  private final ConnectionTimelineEventService connectionTimelineEventService;
+  private final CurrentUserService currentUserService;
   private final StreamRefreshesHandler streamRefreshesHandler;
+  private final NotificationHelper notificationHelper;
 
   @VisibleForTesting
   public SchedulerHandler(final ConfigRepository configRepository,
@@ -187,7 +186,10 @@ public class SchedulerHandler {
                           final ConnectorDefinitionSpecificationHandler connectorDefinitionSpecificationHandler,
                           final WorkspaceService workspaceService,
                           final SecretPersistenceConfigService secretPersistenceConfigService,
-                          final StreamRefreshesHandler streamRefreshesHandler) {
+                          final ConnectionTimelineEventService connectionEventService,
+                          final CurrentUserService currentUserService,
+                          final StreamRefreshesHandler streamRefreshesHandler,
+                          final NotificationHelper notificationHelper) {
     this.configRepository = configRepository;
     this.secretsRepositoryWriter = secretsRepositoryWriter;
     this.synchronousSchedulerClient = synchronousSchedulerClient;
@@ -208,12 +210,15 @@ public class SchedulerHandler {
     this.connectorDefinitionSpecificationHandler = connectorDefinitionSpecificationHandler;
     this.workspaceService = workspaceService;
     this.secretPersistenceConfigService = secretPersistenceConfigService;
+    this.connectionTimelineEventService = connectionEventService;
+    this.currentUserService = currentUserService;
     this.jobCreationAndStatusUpdateHelper = new JobCreationAndStatusUpdateHelper(
         jobPersistence,
         configRepository,
         jobNotifier,
         jobTracker);
     this.streamRefreshesHandler = streamRefreshesHandler;
+    this.notificationHelper = notificationHelper;
   }
 
   public CheckConnectionRead checkSourceConnectionFromSourceId(final SourceIdRequestBody sourceIdRequestBody)
@@ -346,10 +351,24 @@ public class SchedulerHandler {
     return checkDestinationConnectionFromDestinationCreate(destinationCoreConfig);
   }
 
-  public SourceDiscoverSchemaRead discoverSchemaForSourceFromSourceId(final SourceDiscoverSchemaRequestBody discoverSchemaRequestBody)
+  public SourceDiscoverSchemaRead discoverSchemaForSourceFromSourceId(final SourceDiscoverSchemaRequestBody req)
+      throws ConfigNotFoundException, IOException, JsonValidationException {
+    final SourceConnection source = configRepository.getSourceConnection(req.getSourceId());
+
+    if (featureFlagClient.boolVariation(DiscoverPostprocessInTemporal.INSTANCE, new Workspace(source.getWorkspaceId()))) {
+      return discover(req, source);
+    } else {
+      return discoverAndGloballyDisable(req, source);
+    }
+  }
+
+  /**
+   * Runs discover schema and performs conditional disabling of all connections.
+   */
+  public SourceDiscoverSchemaRead discoverAndGloballyDisable(final SourceDiscoverSchemaRequestBody discoverSchemaRequestBody,
+                                                             final SourceConnection source)
       throws ConfigNotFoundException, IOException, JsonValidationException {
     final UUID sourceId = discoverSchemaRequestBody.getSourceId();
-    final SourceConnection source = configRepository.getSourceConnection(sourceId);
     final StandardSourceDefinition sourceDef = configRepository.getStandardSourceDefinition(source.getSourceDefinitionId());
     final ActorDefinitionVersion sourceVersion = actorDefinitionVersionHelper.getSourceVersion(sourceDef, source.getWorkspaceId(), sourceId);
     final boolean isCustomConnector = sourceDef.getCustom();
@@ -396,6 +415,81 @@ public class SchedulerHandler {
         .catalog(CatalogConverter.toApi(airbyteCatalog, sourceVersion))
         .jobInfo(emptyJob)
         .catalogId(currentCatalog.get().getId());
+  }
+
+  /**
+   * Runs discover schema and does not disable other connections.
+   */
+  public SourceDiscoverSchemaRead discover(final SourceDiscoverSchemaRequestBody req, final SourceConnection source)
+      throws ConfigNotFoundException, IOException, JsonValidationException {
+    final UUID sourceId = req.getSourceId();
+    final StandardSourceDefinition sourceDef = configRepository.getStandardSourceDefinition(source.getSourceDefinitionId());
+    final ActorDefinitionVersion sourceVersion = actorDefinitionVersionHelper.getSourceVersion(sourceDef, source.getWorkspaceId(), sourceId);
+
+    final boolean skipCacheCheck = req.getDisableCache() != null && req.getDisableCache();
+    // Skip cache check and run discover.
+    if (skipCacheCheck) {
+      return runDiscoverJobDiffAndConditionallyDisable(source, sourceDef, sourceVersion, req.getPriority(), req.getConnectionId());
+    }
+
+    // Check cache.
+    final String configHash = HASH_FUNCTION.hashBytes(Jsons.serialize(source.getConfiguration()).getBytes(
+        Charsets.UTF_8)).toString();
+    final String connectorVersion = sourceVersion.getDockerImageTag();
+
+    final Optional<ActorCatalog> existingCatalog =
+        configRepository.getActorCatalog(req.getSourceId(), connectorVersion, configHash);
+
+    // No catalog exists, run discover.
+    if (existingCatalog.isEmpty()) {
+      return runDiscoverJobDiffAndConditionallyDisable(source, sourceDef, sourceVersion, req.getPriority(), req.getConnectionId());
+    }
+
+    // We have a catalog cached, no need to run discover. Return cached catalog.
+    final AirbyteCatalog airbyteCatalog = Jsons.object(existingCatalog.get().getCatalog(), AirbyteCatalog.class);
+    final SynchronousJobRead emptyJob = new SynchronousJobRead()
+        .configId("NoConfiguration")
+        .configType(JobConfigType.DISCOVER_SCHEMA)
+        .id(UUID.randomUUID())
+        .createdAt(0L)
+        .endedAt(0L)
+        .logs(new LogRead().logLines(new ArrayList<>()))
+        .succeeded(true);
+    return new SourceDiscoverSchemaRead()
+        .catalog(CatalogConverter.toApi(airbyteCatalog, sourceVersion))
+        .jobInfo(emptyJob)
+        .catalogId(existingCatalog.get().getId());
+  }
+
+  private SourceDiscoverSchemaRead runDiscoverJobDiffAndConditionallyDisable(final SourceConnection source,
+                                                                             final StandardSourceDefinition sourceDef,
+                                                                             final ActorDefinitionVersion sourceVersion,
+                                                                             final io.airbyte.api.model.generated.WorkloadPriority priority,
+                                                                             final UUID connectionId)
+      throws ConfigNotFoundException, IOException, JsonValidationException {
+    final boolean isCustomConnector = sourceDef.getCustom();
+    // ResourceRequirements are read from actor definition and can be null; but if it's not null it will
+    // have higher priority and overwrite
+    // the default settings in WorkerConfig.
+    final ResourceRequirements resourceRequirements =
+        getResourceRequirementsForJobType(sourceDef.getResourceRequirements(), JobType.DISCOVER_SCHEMA)
+            .orElse(null);
+
+    final SynchronousResponse<UUID> persistedCatalogId =
+        synchronousSchedulerClient.createDiscoverSchemaJob(
+            source,
+            sourceVersion,
+            isCustomConnector,
+            resourceRequirements,
+            priority == null ? WorkloadPriority.HIGH : WorkloadPriority.fromValue(priority.toString()));
+
+    final var schemaRead = retrieveDiscoveredSchema(persistedCatalogId, sourceVersion);
+    // no connection to diff
+    if (connectionId == null) {
+      return schemaRead;
+    }
+
+    return connectionsHandler.diffCatalogAndConditionallyDisable(connectionId, schemaRead.getCatalogId());
   }
 
   public void applySchemaChangeForSource(final SourceAutoPropagateChange sourceAutoPropagateChange)
@@ -456,66 +550,17 @@ public class SchedulerHandler {
             updateObject.getConnectionId(), result);
         LOGGER.info("Propagating changes for connectionId: '{}', new catalogId '{}'",
             connectionRead.getConnectionId(), sourceAutoPropagateChange.getCatalogId());
-        final boolean newNotificationsEnabled = featureFlagClient.boolVariation(
-            UseNewSchemaUpdateNotification.INSTANCE, new Workspace(sourceAutoPropagateChange.getWorkspaceId()));
+
         if (notificationSettings != null
-            && newNotificationsEnabled
             && notificationSettings.getSendOnConnectionUpdate() != null
             && !result.appliedDiff().getTransforms().isEmpty()
             && (Boolean.TRUE == connectionRead.getNotifySchemaChanges())) {
-          notifySchemaPropagated(notificationSettings, diff, workspace, connectionRead, source,
+          notificationHelper.notifySchemaPropagated(notificationSettings, diff, workspace, connectionRead, source,
               workspace.getEmail());
         }
       } else {
         LOGGER.info("Not propagating changes for connectionId: '{}', new catalogId '{}'",
             connectionRead.getConnectionId(), sourceAutoPropagateChange.getCatalogId());
-      }
-    }
-  }
-
-  public void notifySchemaPropagated(final NotificationSettings notificationSettings,
-                                     final CatalogDiff diff,
-                                     final StandardWorkspace workspace,
-                                     final ConnectionRead connection,
-                                     final SourceConnection source,
-                                     final String email)
-      throws IOException {
-    final NotificationItem item;
-
-    final String connectionUrl = webUrlHelper.getConnectionUrl(workspace.getWorkspaceId(), connection.getConnectionId());
-    final String workspaceUrl = webUrlHelper.getWorkspaceUrl(workspace.getWorkspaceId());
-    final String sourceUrl = webUrlHelper.getSourceUrl(workspace.getWorkspaceId(), source.getSourceId());
-    final boolean isBreakingChange = AutoPropagateSchemaChangeHelper.containsBreakingChange(diff);
-
-    SchemaUpdateNotification notification = SchemaUpdateNotification.builder()
-        .sourceInfo(SourceInfo.builder().name(source.getName()).id(source.getSourceId()).url(sourceUrl).build())
-        .connectionInfo(ConnectionInfo.builder().name(connection.getName()).id(connection.getConnectionId()).url(connectionUrl).build())
-        .workspace(WorkspaceInfo.builder().name(workspace.getName()).id(workspace.getWorkspaceId()).url(workspaceUrl).build())
-        .catalogDiff(diff)
-        .isBreakingChange(isBreakingChange)
-        .build();
-    if (isBreakingChange) {
-      item = notificationSettings.getSendOnConnectionUpdateActionRequired();
-    } else {
-      item = notificationSettings.getSendOnConnectionUpdate();
-    }
-    for (final NotificationType type : item.getNotificationType()) {
-      try {
-        switch (type) {
-          case SLACK -> {
-            final SlackNotificationClient slackNotificationClient = new SlackNotificationClient(item.getSlackConfiguration());
-            slackNotificationClient.notifySchemaPropagated(notification, email);
-          }
-          case CUSTOMERIO -> {
-            final CustomerioNotificationClient emailNotificationClient = new CustomerioNotificationClient();
-            emailNotificationClient.notifySchemaPropagated(notification, email);
-          }
-          default -> {
-            LOGGER.warn("Notification type {} not supported", type);
-          }
-        }
-      } catch (final InterruptedException e) {
-        LOGGER.error("Failed to send notification for connectionId: '{}'", connection.getConnectionId(), e);
       }
     }
   }
@@ -578,7 +623,7 @@ public class SchedulerHandler {
   }
 
   public JobInfoRead resetConnectionStream(final ConnectionStreamRequestBody connectionStreamRequestBody)
-      throws IOException {
+      throws IOException, ConfigNotFoundException {
     return submitResetConnectionStreamsToWorker(connectionStreamRequestBody.getConnectionId(), connectionStreamRequestBody.getStreams());
   }
 
@@ -607,18 +652,6 @@ public class SchedulerHandler {
           actorDefinitionVersionHelper.getDestinationVersion(destinationDef, destination.getWorkspaceId(), destination.getDestinationId());
       final String destinationImageName = destinationVersion.getDockerRepository() + ":" + destinationVersion.getDockerImageTag();
 
-      final List<StandardSyncOperation> standardSyncOperations = Lists.newArrayList();
-      for (final var operationId : standardSync.getOperationIds()) {
-        final StandardSyncOperation standardSyncOperation = configRepository.getStandardSyncOperation(operationId);
-        // NOTE: we must run normalization operations during resets, because we rely on them to clear the
-        // normalized tables. However, we don't want to run other operations (dbt, webhook) because those
-        // are meant to transform the data after the sync but there's no data to transform. Webhook
-        // operations particularly will fail because we don't populate some required config during resets.
-        if (StandardSyncOperation.OperatorType.NORMALIZATION.equals(standardSyncOperation.getOperatorType())) {
-          standardSyncOperations.add(standardSyncOperation);
-        }
-      }
-
       final Optional<Long> jobIdOptional =
           jobCreator.createResetConnectionJob(
               destination,
@@ -628,7 +661,7 @@ public class SchedulerHandler {
               destinationImageName,
               new Version(destinationVersion.getProtocolVersion()),
               destinationDef.getCustom(),
-              standardSyncOperations,
+              List.of(),
               streamsToReset,
               destination.getWorkspaceId());
 
@@ -700,15 +733,6 @@ public class SchedulerHandler {
       updateObject.status(connectionStatus);
 
       connectionsHandler.updateConnection(updateObject);
-      // on workspace where the new detailed schema change notification is enabled, notifications are sent
-      // right after the diff is computed, and we
-      // don't need to send them here.
-      final boolean newNotificationsEnabled = featureFlagClient.boolVariation(UseNewSchemaUpdateNotification.INSTANCE, new Workspace(workspaceId));
-      if (shouldNotifySchemaChange(diff, connectionRead, discoverSchemaRequestBody) && !newNotificationsEnabled) {
-        final String url = webUrlHelper.getConnectionReplicationPageUrl(workspaceId, connectionRead.getConnectionId());
-        final String sourceName = configRepository.getSourceConnection(connectionRead.getSourceId()).getName();
-        eventRunner.sendSchemaChangeNotification(connectionRead.getConnectionId(), connectionRead.getName(), sourceName, url, containsBreakingChange);
-      }
       if (connectionRead.getConnectionId().equals(discoverSchemaRequestBody.getConnectionId())) {
         discoveredSchema.catalogDiff(diff).breakingChange(containsBreakingChange).connectionStatus(connectionStatus);
       }
@@ -736,13 +760,6 @@ public class SchedulerHandler {
     return updateSchemaResult;
   }
 
-  private boolean shouldNotifySchemaChange(final CatalogDiff diff,
-                                           final ConnectionRead connectionRead,
-                                           final SourceDiscoverSchemaRequestBody requestBody) {
-    return !diff.getTransforms().isEmpty() && connectionRead.getNotifySchemaChanges() && requestBody.getNotifySchemaChange() != null
-        && requestBody.getNotifySchemaChange();
-  }
-
   private boolean shouldDisableConnection(final boolean containsBreakingChange,
                                           final NonBreakingChangesPreference preference,
                                           final CatalogDiff diff) {
@@ -766,6 +783,31 @@ public class SchedulerHandler {
     return checkConnectionRead;
   }
 
+  private UUID getCurrentUserIdIfExist() {
+    try {
+      return currentUserService.getCurrentUser().getUserId();
+    } catch (final Exception e) {
+      log.info("Unable to get current user associated with the request. " + e);
+      return null;
+    }
+  }
+
+  private long getRecordsLoaded(final List<io.airbyte.api.model.generated.@Valid StreamStats> streamAggregatedStats) {
+    long totalRecordsLoaded = 0;
+    for (final io.airbyte.api.model.generated.@Valid StreamStats streamStats : streamAggregatedStats) {
+      totalRecordsLoaded += streamStats.getRecordsCommitted();
+    }
+    return totalRecordsLoaded;
+  }
+
+  private long getBytesLoaded(final List<io.airbyte.api.model.generated.@Valid StreamStats> streamAggregatedStats) {
+    long totalBytesLoaded = 0;
+    for (final io.airbyte.api.model.generated.@Valid StreamStats streamStats : streamAggregatedStats) {
+      totalBytesLoaded += streamStats.getBytesCommitted();
+    }
+    return totalBytesLoaded;
+  }
+
   private JobInfoRead submitCancellationToWorker(final Long jobId) throws IOException {
     final Job job = jobPersistence.getJob(jobId);
 
@@ -773,6 +815,21 @@ public class SchedulerHandler {
     if (cancellationResult.getFailingReason().isPresent()) {
       throw new IllegalStateException(cancellationResult.getFailingReason().get());
     }
+    final JobInfoRead jobInfo = readJobFromResult(cancellationResult);
+
+    // Store connection timeline event (job cancellation).
+    final @Valid List<io.airbyte.api.model.generated.@Valid StreamStats> streamAggregatedStats = jobInfo.getJob().getStreamAggregatedStats();
+    final FinalStatusEvent event = new FinalStatusEvent(
+        jobInfo.getJob().getId(),
+        jobInfo.getJob().getCreatedAt(),
+        jobInfo.getJob().getUpdatedAt(),
+        getBytesLoaded(streamAggregatedStats),
+        getRecordsLoaded(streamAggregatedStats),
+        job.getAttemptsCount(),
+        job.getConfigType().name(),
+        JobStatus.CANCELLED.name(),
+        JobConverter.getStreamsAssociatedWithJob(job));
+    connectionTimelineEventService.writeEvent(UUID.fromString(job.getScope()), event, getCurrentUserIdIfExist());
 
     // query same job ID again to get updated job info after cancellation
     return jobConverter.getJobInfoRead(jobPersistence.getJob(jobId));
@@ -786,35 +843,47 @@ public class SchedulerHandler {
       throw new IllegalStateException("Can only sync an active connection");
     }
     final ManualOperationResult manualSyncResult = eventRunner.startNewManualSync(connectionId);
+    final JobInfoRead jobInfo = readJobFromResult(manualSyncResult);
+    logManuallyStartedEventInConnectionTimeline(connectionId, jobInfo, null);
+    return jobInfo;
+  }
 
-    return readJobFromResult(manualSyncResult);
+  private void logManuallyStartedEventInConnectionTimeline(final UUID connectionId, final JobInfoRead jobInfo, final List<StreamDescriptor> streams) {
+    if (jobInfo != null && jobInfo.getJob() != null && jobInfo.getJob().getConfigType() != null) {
+      final ManuallyStartedEvent event = new ManuallyStartedEvent(
+          jobInfo.getJob().getId(),
+          jobInfo.getJob().getCreatedAt(),
+          jobInfo.getJob().getConfigType().name(),
+          streams);
+      connectionTimelineEventService.writeEvent(connectionId, event, getCurrentUserIdIfExist());
+    }
   }
 
   private JobInfoRead submitResetConnectionToWorker(final UUID connectionId) throws IOException, IllegalStateException, ConfigNotFoundException {
-    return submitResetConnectionToWorker(connectionId, configRepository.getAllStreamsForConnection(connectionId), false);
+    return submitResetConnectionToWorker(connectionId, configRepository.getAllStreamsForConnection(connectionId));
   }
 
   private JobInfoRead submitResetConnectionToWorker(final UUID connectionId,
-                                                    final List<StreamDescriptor> streamsToReset,
-                                                    final boolean runSyncImmediately)
+                                                    final List<StreamDescriptor> streamsToReset)
       throws IOException {
     final ManualOperationResult resetConnectionResult = eventRunner.resetConnection(
         connectionId,
-        streamsToReset,
-        runSyncImmediately);
+        streamsToReset);
 
-    return readJobFromResult(resetConnectionResult);
+    final JobInfoRead jobInfo = readJobFromResult(resetConnectionResult);
+    logManuallyStartedEventInConnectionTimeline(connectionId, jobInfo, streamsToReset);
+    return jobInfo;
   }
 
   private JobInfoRead submitResetConnectionStreamsToWorker(final UUID connectionId, final List<ConnectionStream> streams)
-      throws IOException, IllegalStateException {
-    return submitResetConnectionToWorker(connectionId,
-        streams.stream().map(s -> new StreamDescriptor().withName(s.getStreamName()).withNamespace(s.getStreamNamespace())).collect(
-            Collectors.toList()),
-        false);
+      throws IOException, IllegalStateException, ConfigNotFoundException {
+    final List<StreamDescriptor> actualStreamsToReset = streams.isEmpty()
+        ? configRepository.getAllStreamsForConnection(connectionId)
+        : streams.stream().map(s -> new StreamDescriptor().withName(s.getStreamName()).withNamespace(s.getStreamNamespace())).toList();
+    return submitResetConnectionToWorker(connectionId, actualStreamsToReset);
   }
 
-  private JobInfoRead readJobFromResult(final ManualOperationResult manualOperationResult) throws IOException, IllegalStateException {
+  public JobInfoRead readJobFromResult(final ManualOperationResult manualOperationResult) throws IOException, IllegalStateException {
     if (manualOperationResult.getFailingReason().isPresent()) {
       if (VALUE_CONFLICT_EXCEPTION_ERROR_CODE_SET.contains(manualOperationResult.getErrorCode().get())) {
         throw new ValueConflictKnownException(manualOperationResult.getFailingReason().get());
@@ -829,8 +898,7 @@ public class SchedulerHandler {
   }
 
   /**
-   * Wrapper around
-   * {@link SecretsRepositoryWriter#statefulSplitSecretsToDefaultSecretPersistence(JsonNode, ConnectorSpecification)}.
+   * Wrapper around {@link SecretsRepositoryWriter#createFromConfig}.
    *
    * @param workspaceId workspaceId
    * @param connectionConfiguration connectionConfiguration
@@ -847,18 +915,14 @@ public class SchedulerHandler {
     if (organizationId.isPresent() && featureFlagClient.boolVariation(UseRuntimeSecretPersistence.INSTANCE, new Organization(organizationId.get()))) {
       final SecretPersistenceConfig secretPersistenceConfig;
       try {
-        secretPersistenceConfig = secretPersistenceConfigService.getSecretPersistenceConfig(ScopeType.ORGANIZATION, organizationId.get());
+        secretPersistenceConfig = secretPersistenceConfigService.get(ScopeType.ORGANIZATION, organizationId.get());
       } catch (final io.airbyte.data.exceptions.ConfigNotFoundException e) {
         throw new ConfigNotFoundException(e.getType(), e.getConfigId());
       }
-      return secretsRepositoryWriter.statefulSplitSecretsToRuntimeSecretPersistence(
-          connectionConfiguration,
-          connectorSpecification,
+      return secretsRepositoryWriter.createEphemeralFromConfig(connectionConfiguration, connectorSpecification.getConnectionSpecification(),
           new RuntimeSecretPersistence(secretPersistenceConfig));
     } else {
-      return secretsRepositoryWriter.statefulSplitSecretsToDefaultSecretPersistence(
-          connectionConfiguration,
-          connectorSpecification);
+      return secretsRepositoryWriter.createEphemeralFromConfig(connectionConfiguration, connectorSpecification.getConnectionSpecification(), null);
     }
   }
 
