@@ -6,18 +6,20 @@ package io.airbyte.workers;
 
 import static org.junit.Assert.assertEquals;
 import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
 import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.node.JsonNodeFactory;
 import io.airbyte.api.client.AirbyteApiClient;
+import io.airbyte.api.client.generated.ActorDefinitionVersionApi;
+import io.airbyte.api.client.generated.AttemptApi;
 import io.airbyte.api.client.generated.ConnectionApi;
+import io.airbyte.api.client.generated.DestinationApi;
 import io.airbyte.api.client.generated.JobsApi;
 import io.airbyte.api.client.generated.SecretsPersistenceConfigApi;
 import io.airbyte.api.client.generated.StateApi;
-import io.airbyte.api.client.invoker.generated.ApiException;
 import io.airbyte.api.client.model.generated.AirbyteCatalog;
 import io.airbyte.api.client.model.generated.AirbyteStream;
 import io.airbyte.api.client.model.generated.AirbyteStreamAndConfiguration;
@@ -27,13 +29,22 @@ import io.airbyte.api.client.model.generated.ConnectionAndJobIdRequestBody;
 import io.airbyte.api.client.model.generated.ConnectionIdRequestBody;
 import io.airbyte.api.client.model.generated.ConnectionRead;
 import io.airbyte.api.client.model.generated.ConnectionState;
+import io.airbyte.api.client.model.generated.ConnectionStatus;
+import io.airbyte.api.client.model.generated.DestinationRead;
+import io.airbyte.api.client.model.generated.DestinationSyncMode;
 import io.airbyte.api.client.model.generated.FieldTransform;
+import io.airbyte.api.client.model.generated.JobConfigType;
 import io.airbyte.api.client.model.generated.JobOptionalRead;
 import io.airbyte.api.client.model.generated.JobRead;
+import io.airbyte.api.client.model.generated.JobStatus;
 import io.airbyte.api.client.model.generated.ResetConfig;
+import io.airbyte.api.client.model.generated.ResolveActorDefinitionVersionResponse;
+import io.airbyte.api.client.model.generated.SaveStreamAttemptMetadataRequestBody;
 import io.airbyte.api.client.model.generated.SchemaChangeBackfillPreference;
+import io.airbyte.api.client.model.generated.StreamAttemptMetadata;
 import io.airbyte.api.client.model.generated.StreamDescriptor;
 import io.airbyte.api.client.model.generated.StreamTransform;
+import io.airbyte.api.client.model.generated.StreamTransformUpdateStream;
 import io.airbyte.api.client.model.generated.SyncMode;
 import io.airbyte.commons.json.Jsons;
 import io.airbyte.config.ConnectionContext;
@@ -42,7 +53,6 @@ import io.airbyte.config.State;
 import io.airbyte.config.SyncResourceRequirements;
 import io.airbyte.config.helpers.StateMessageHelper;
 import io.airbyte.config.secrets.SecretsRepositoryReader;
-import io.airbyte.featureflag.ActivateRefreshes;
 import io.airbyte.featureflag.AutoBackfillOnNewColumns;
 import io.airbyte.featureflag.FeatureFlagClient;
 import io.airbyte.featureflag.Flag;
@@ -50,13 +60,19 @@ import io.airbyte.featureflag.TestClient;
 import io.airbyte.featureflag.Workspace;
 import io.airbyte.persistence.job.models.IntegrationLauncherConfig;
 import io.airbyte.persistence.job.models.JobRunConfig;
+import io.airbyte.workers.helper.CatalogDiffConverter;
+import io.airbyte.workers.helper.ResumableFullRefreshStatsHelper;
 import io.airbyte.workers.models.RefreshSchemaActivityOutput;
 import io.airbyte.workers.models.ReplicationActivityInput;
+import java.io.IOException;
 import java.util.List;
 import java.util.UUID;
+import org.assertj.core.api.CollectionAssert;
 import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.ValueSource;
+import org.mockito.ArgumentCaptor;
 
 /**
  * Tests for the replication activity specifically.
@@ -68,12 +84,34 @@ class ReplicationInputHydratorTest {
   private static final UUID DESTINATION_ID = UUID.randomUUID();
   private static final JsonNode SOURCE_CONFIG = JsonNodeFactory.instance.objectNode();
   private static final JsonNode DESTINATION_CONFIG = JsonNodeFactory.instance.objectNode();
+  private static final String CONNECTION_NAME = "connection-name";
 
   private static final String TEST_STREAM_NAME = "test-stream-name";
   private static final String TEST_STREAM_NAMESPACE = "test-stream-namespace";
-  private static final AirbyteCatalog SYNC_CATALOG = new AirbyteCatalog().addStreamsItem(new AirbyteStreamAndConfiguration()
-      .stream(new AirbyteStream().addSupportedSyncModesItem(SyncMode.INCREMENTAL).name(TEST_STREAM_NAME).namespace(TEST_STREAM_NAMESPACE))
-      .config(new AirbyteStreamConfiguration().syncMode(SyncMode.INCREMENTAL)));
+  private static final AirbyteCatalog SYNC_CATALOG = new AirbyteCatalog(List.of(
+      new AirbyteStreamAndConfiguration(
+          new AirbyteStream(
+              TEST_STREAM_NAME,
+              null,
+              List.of(SyncMode.INCREMENTAL),
+              null,
+              null,
+              null,
+              TEST_STREAM_NAMESPACE,
+              null),
+          new AirbyteStreamConfiguration(
+              SyncMode.INCREMENTAL,
+              DestinationSyncMode.APPEND,
+              null,
+              null,
+              null,
+              null,
+              null,
+              null,
+              null,
+              null,
+              null,
+              null))));
   private static final ConnectionState CONNECTION_STATE_RESPONSE = Jsons.deserialize(String
       .format("""
               {
@@ -105,19 +143,40 @@ class ReplicationInputHydratorTest {
       }]
       """));
   private static final Long JOB_ID = 123L;
-  private static final JobRunConfig JOB_RUN_CONFIG = new JobRunConfig().withJobId(JOB_ID.toString());
-  private static final IntegrationLauncherConfig DESTINATION_LAUNCHER_CONFIG = new IntegrationLauncherConfig();
+  private static final Long ATTEMPT_NUMBER = 2L;
+  private static final JobRunConfig JOB_RUN_CONFIG = new JobRunConfig().withJobId(JOB_ID.toString()).withAttemptId(ATTEMPT_NUMBER);
+  private static final IntegrationLauncherConfig DESTINATION_LAUNCHER_CONFIG =
+      new IntegrationLauncherConfig().withDockerImage("dockerimage:dockertag");
   private static final IntegrationLauncherConfig SOURCE_LAUNCHER_CONFIG = new IntegrationLauncherConfig();
   private static final SyncResourceRequirements SYNC_RESOURCE_REQUIREMENTS = new SyncResourceRequirements();
   private static final UUID WORKSPACE_ID = UUID.randomUUID();
-  private static final CatalogDiff CATALOG_DIFF = new CatalogDiff()
-      .addTransformsItem(new StreamTransform()
-          .streamDescriptor(new StreamDescriptor()
-              .name(SYNC_CATALOG.getStreams().get(0).getStream().getName())
-              .namespace(SYNC_CATALOG.getStreams().get(0).getStream().getNamespace()))
-          .transformType(StreamTransform.TransformTypeEnum.UPDATE_STREAM)
-          .addUpdateStreamItem(new FieldTransform()
-              .transformType(FieldTransform.TransformTypeEnum.ADD_FIELD)));
+  private static final CatalogDiff CATALOG_DIFF = new CatalogDiff(
+      List.of(
+          new StreamTransform(
+              StreamTransform.TransformType.UPDATE_STREAM,
+              new StreamDescriptor(SYNC_CATALOG.getStreams().getFirst().getStream().getName(),
+                  SYNC_CATALOG.getStreams().getFirst().getStream().getNamespace()),
+              new StreamTransformUpdateStream(List.of(new FieldTransform(
+                  FieldTransform.TransformType.ADD_FIELD,
+                  List.of(),
+                  false,
+                  null,
+                  null,
+                  null)),
+                  List.of()))));
+  private static final DestinationRead DESTINATION_READ = new DestinationRead(
+      UUID.randomUUID(),
+      UUID.randomUUID(),
+      UUID.randomUUID(),
+      Jsons.emptyObject(),
+      "name",
+      "destinationName",
+      "icon",
+      false,
+      null,
+      null,
+      null);
+
   private static SecretsRepositoryReader secretsRepositoryReader;
   private static AirbyteApiClient airbyteApiClient;
   private static ConnectionApi connectionApi;
@@ -125,30 +184,39 @@ class ReplicationInputHydratorTest {
   private static JobsApi jobsApi;
   private static FeatureFlagClient featureFlagClient;
   private SecretsPersistenceConfigApi secretsPersistenceConfigApi;
+  private ActorDefinitionVersionApi actorDefinitionVersionApi;
+  private AttemptApi attemptApi;
+  private DestinationApi destinationApi;
+  private ResumableFullRefreshStatsHelper resumableFullRefreshStatsHelper;
 
   @BeforeEach
-  void setup() throws ApiException {
+  void setup() throws IOException {
     secretsRepositoryReader = mock(SecretsRepositoryReader.class);
     airbyteApiClient = mock(AirbyteApiClient.class);
+    attemptApi = mock(AttemptApi.class);
     connectionApi = mock(ConnectionApi.class);
     stateApi = mock(StateApi.class);
     jobsApi = mock(JobsApi.class);
     featureFlagClient = mock(TestClient.class);
     secretsPersistenceConfigApi = mock(SecretsPersistenceConfigApi.class);
+    actorDefinitionVersionApi = mock(ActorDefinitionVersionApi.class);
+    destinationApi = mock(DestinationApi.class);
+    resumableFullRefreshStatsHelper = mock(ResumableFullRefreshStatsHelper.class);
+    when(destinationApi.getBaseUrl()).thenReturn("http://localhost:8001/api");
+    when(destinationApi.getDestination(any())).thenReturn(DESTINATION_READ);
+    when(airbyteApiClient.getAttemptApi()).thenReturn(attemptApi);
     when(airbyteApiClient.getConnectionApi()).thenReturn(connectionApi);
+    when(airbyteApiClient.getDestinationApi()).thenReturn(destinationApi);
     when(airbyteApiClient.getStateApi()).thenReturn(stateApi);
     when(airbyteApiClient.getJobsApi()).thenReturn(jobsApi);
     when(airbyteApiClient.getSecretPersistenceConfigApi()).thenReturn(secretsPersistenceConfigApi);
-    when(stateApi.getState(new ConnectionIdRequestBody().connectionId(CONNECTION_ID))).thenReturn(CONNECTION_STATE_RESPONSE);
+    when(airbyteApiClient.getActorDefinitionVersionApi()).thenReturn(actorDefinitionVersionApi);
+    when(airbyteApiClient.getDestinationApi()).thenReturn(destinationApi);
+    when(stateApi.getState(new ConnectionIdRequestBody(CONNECTION_ID))).thenReturn(CONNECTION_STATE_RESPONSE);
   }
 
   private ReplicationInputHydrator getReplicationInputHydrator() {
-    return new ReplicationInputHydrator(
-        airbyteApiClient.getConnectionApi(),
-        airbyteApiClient.getJobsApi(),
-        airbyteApiClient.getStateApi(),
-        secretsPersistenceConfigApi, secretsRepositoryReader,
-        featureFlagClient);
+    return new ReplicationInputHydrator(airbyteApiClient, resumableFullRefreshStatsHelper, secretsRepositoryReader, featureFlagClient);
   }
 
   private ReplicationActivityInput getDefaultReplicationActivityInputForTest() {
@@ -163,7 +231,6 @@ class ReplicationInputHydratorTest {
         SYNC_RESOURCE_REQUIREMENTS,
         WORKSPACE_ID,
         CONNECTION_ID,
-        false,
         "unused",
         false,
         JobSyncConfig.NamespaceDefinitionType.CUSTOMFORMAT,
@@ -205,12 +272,23 @@ class ReplicationInputHydratorTest {
     final ReplicationInputHydrator replicationInputHydrator = getReplicationInputHydrator();
     final ReplicationActivityInput input = getDefaultReplicationActivityInputForTest();
     input.setIsReset(true);
-    when(jobsApi.getLastReplicationJob(new ConnectionIdRequestBody().connectionId(CONNECTION_ID))).thenReturn(
-        new JobOptionalRead().job(new JobRead().resetConfig(new ResetConfig().streamsToReset(List.of(
-            new StreamDescriptor().name(TEST_STREAM_NAME).namespace(TEST_STREAM_NAMESPACE))))));
+    when(jobsApi.getLastReplicationJob(new ConnectionIdRequestBody(CONNECTION_ID))).thenReturn(
+        new JobOptionalRead(new JobRead(
+            JOB_ID,
+            JobConfigType.SYNC,
+            CONNECTION_ID.toString(),
+            System.currentTimeMillis(),
+            System.currentTimeMillis(),
+            JobStatus.CANCELLED,
+            null,
+            null,
+            new ResetConfig(List.of(new StreamDescriptor(TEST_STREAM_NAME, TEST_STREAM_NAMESPACE))),
+            null,
+            null,
+            null)));
     final var replicationInput = replicationInputHydrator.getHydratedReplicationInput(input);
     assertEquals(1, replicationInput.getCatalog().getStreams().size());
-    assertEquals(io.airbyte.protocol.models.SyncMode.FULL_REFRESH, replicationInput.getCatalog().getStreams().get(0).getSyncMode());
+    assertEquals(io.airbyte.protocol.models.SyncMode.FULL_REFRESH, replicationInput.getCatalog().getStreams().getFirst().getSyncMode());
   }
 
   @ParameterizedTest
@@ -227,46 +305,137 @@ class ReplicationInputHydratorTest {
     mockEnableBackfillForConnection(withRefresh);
     final ReplicationInputHydrator replicationInputHydrator = getReplicationInputHydrator();
     final ReplicationActivityInput input = getDefaultReplicationActivityInputForTest();
-    input.setSchemaRefreshOutput(new RefreshSchemaActivityOutput(CATALOG_DIFF));
+    input.setSchemaRefreshOutput(new RefreshSchemaActivityOutput(CatalogDiffConverter.toDomain(CATALOG_DIFF)));
     final var replicationInput = replicationInputHydrator.getHydratedReplicationInput(input);
     final var typedState = StateMessageHelper.getTypedState(replicationInput.getState().getState());
     assertEquals(JsonNodeFactory.instance.nullNode(), typedState.get().getStateMessages().get(0).getStream().getStreamState());
+  }
+
+  @Test
+  void testTrackBackfillAndResume() throws IOException {
+    final ReplicationInputHydrator replicationInputHydrator = getReplicationInputHydrator();
+    final io.airbyte.config.StreamDescriptor stream1 = new io.airbyte.config.StreamDescriptor().withName("s1").withNamespace("ns1");
+    final io.airbyte.config.StreamDescriptor stream2 = new io.airbyte.config.StreamDescriptor().withName("s1");
+    final io.airbyte.config.StreamDescriptor stream3 = new io.airbyte.config.StreamDescriptor().withName("s1").withNamespace("ns2");
+    final io.airbyte.config.StreamDescriptor stream4 = new io.airbyte.config.StreamDescriptor().withName("s2");
+    replicationInputHydrator.trackBackfillAndResume(
+        1L,
+        2L,
+        List.of(stream1, stream2, stream4),
+        List.of(stream1, stream3, stream4));
+
+    final SaveStreamAttemptMetadataRequestBody expectedRequest = new SaveStreamAttemptMetadataRequestBody(
+        1,
+        2,
+        List.of(
+            new StreamAttemptMetadata("s1", true, true, "ns1"),
+            new StreamAttemptMetadata("s1", false, true, null),
+            new StreamAttemptMetadata("s1", true, false, "ns2"),
+            new StreamAttemptMetadata("s2", true, true, null)));
+
+    ArgumentCaptor<SaveStreamAttemptMetadataRequestBody> captor = ArgumentCaptor.forClass(SaveStreamAttemptMetadataRequestBody.class);
+    verify(attemptApi).saveStreamMetadata(captor.capture());
+    assertEquals(expectedRequest.getJobId(), captor.getValue().getJobId());
+    assertEquals(expectedRequest.getAttemptNumber(), captor.getValue().getAttemptNumber());
+    CollectionAssert.assertThatCollection(captor.getValue().getStreamMetadata())
+        .containsExactlyInAnyOrderElementsOf(expectedRequest.getStreamMetadata());
+  }
+
+  @Test
+  void testTrackBackfillAndResumeWithoutBackfill() throws IOException {
+    final ReplicationInputHydrator replicationInputHydrator = getReplicationInputHydrator();
+    final io.airbyte.config.StreamDescriptor stream1 = new io.airbyte.config.StreamDescriptor().withName("s1").withNamespace("ns1");
+    final io.airbyte.config.StreamDescriptor stream2 = new io.airbyte.config.StreamDescriptor().withName("s1");
+    final io.airbyte.config.StreamDescriptor stream3 = new io.airbyte.config.StreamDescriptor().withName("s1").withNamespace("ns2");
+    final io.airbyte.config.StreamDescriptor stream4 = new io.airbyte.config.StreamDescriptor().withName("s2");
+    replicationInputHydrator.trackBackfillAndResume(
+        1L,
+        2L,
+        List.of(stream1, stream2, stream4),
+        null);
+
+    final SaveStreamAttemptMetadataRequestBody expectedRequest = new SaveStreamAttemptMetadataRequestBody(
+        1,
+        2,
+        List.of(
+            new StreamAttemptMetadata("s1", false, true, "ns1"),
+            new StreamAttemptMetadata("s1", false, true, null),
+            new StreamAttemptMetadata("s2", false, true, null)));
+
+    ArgumentCaptor<SaveStreamAttemptMetadataRequestBody> captor = ArgumentCaptor.forClass(SaveStreamAttemptMetadataRequestBody.class);
+    verify(attemptApi).saveStreamMetadata(captor.capture());
+    assertEquals(expectedRequest.getJobId(), captor.getValue().getJobId());
+    assertEquals(expectedRequest.getAttemptNumber(), captor.getValue().getAttemptNumber());
+    CollectionAssert.assertThatCollection(captor.getValue().getStreamMetadata())
+        .containsExactlyInAnyOrderElementsOf(expectedRequest.getStreamMetadata());
+  }
+
+  @Test
+  void testTrackBackfillAndResumeWithoutResume() throws IOException {
+    final ReplicationInputHydrator replicationInputHydrator = getReplicationInputHydrator();
+    final io.airbyte.config.StreamDescriptor stream1 = new io.airbyte.config.StreamDescriptor().withName("s1").withNamespace("ns1");
+    final io.airbyte.config.StreamDescriptor stream3 = new io.airbyte.config.StreamDescriptor().withName("s1").withNamespace("ns2");
+    final io.airbyte.config.StreamDescriptor stream4 = new io.airbyte.config.StreamDescriptor().withName("s2");
+    replicationInputHydrator.trackBackfillAndResume(
+        1L,
+        2L,
+        null,
+        List.of(stream1, stream3, stream4));
+
+    final SaveStreamAttemptMetadataRequestBody expectedRequest = new SaveStreamAttemptMetadataRequestBody(
+        1,
+        2,
+        List.of(
+            new StreamAttemptMetadata("s1", true, false, "ns1"),
+            new StreamAttemptMetadata("s1", true, false, "ns2"),
+            new StreamAttemptMetadata("s2", true, false, null)));
+
+    ArgumentCaptor<SaveStreamAttemptMetadataRequestBody> captor = ArgumentCaptor.forClass(SaveStreamAttemptMetadataRequestBody.class);
+    verify(attemptApi).saveStreamMetadata(captor.capture());
+    assertEquals(expectedRequest.getJobId(), captor.getValue().getJobId());
+    assertEquals(expectedRequest.getAttemptNumber(), captor.getValue().getAttemptNumber());
+    CollectionAssert.assertThatCollection(captor.getValue().getStreamMetadata())
+        .containsExactlyInAnyOrderElementsOf(expectedRequest.getStreamMetadata());
   }
 
   private void mockEnableFeatureFlagForWorkspace(final Flag<Boolean> flag, final UUID workspaceId) {
     when(featureFlagClient.boolVariation(flag, new Workspace(workspaceId))).thenReturn(true);
   }
 
-  private void mockEnableBackfillForConnection(final boolean withRefresh) throws ApiException {
+  private void mockEnableBackfillForConnection(final boolean withRefresh) throws IOException {
     if (withRefresh) {
-      when(connectionApi.getConnectionForJob(new ConnectionAndJobIdRequestBody().connectionId(CONNECTION_ID).jobId(JOB_ID)))
-          .thenReturn(new ConnectionRead()
-              .connectionId(CONNECTION_ID)
-              .syncCatalog(SYNC_CATALOG)
-              .backfillPreference(SchemaChangeBackfillPreference.ENABLED));
+      when(connectionApi.getConnectionForJob(new ConnectionAndJobIdRequestBody(CONNECTION_ID, JOB_ID)))
+          .thenReturn(new ConnectionRead(CONNECTION_ID, CONNECTION_NAME, SOURCE_ID, DESTINATION_ID, SYNC_CATALOG, ConnectionStatus.ACTIVE, false,
+              null, null, null, null, null, null, null, null, null, null, null, null, null, null, SchemaChangeBackfillPreference.ENABLED, null));
     } else {
-      when(connectionApi.getConnection(new ConnectionIdRequestBody().connectionId(CONNECTION_ID)))
-          .thenReturn(new ConnectionRead()
-              .connectionId(CONNECTION_ID)
-              .syncCatalog(SYNC_CATALOG)
-              .backfillPreference(SchemaChangeBackfillPreference.ENABLED));
+      when(connectionApi.getConnection(new ConnectionIdRequestBody(CONNECTION_ID)))
+          .thenReturn(new ConnectionRead(CONNECTION_ID, CONNECTION_NAME, SOURCE_ID, DESTINATION_ID, SYNC_CATALOG, ConnectionStatus.ACTIVE, false,
+              null, null, null, null, null, null, null, null, null, null, null, null, null, null, SchemaChangeBackfillPreference.ENABLED, null));
     }
   }
 
-  private void mockRefresh() throws ApiException {
-    when(featureFlagClient.boolVariation(eq(ActivateRefreshes.INSTANCE), any())).thenReturn(true);
-    when(connectionApi.getConnectionForJob(new ConnectionAndJobIdRequestBody().connectionId(CONNECTION_ID).jobId(JOB_ID)))
-        .thenReturn(new ConnectionRead()
-            .connectionId(CONNECTION_ID)
-            .syncCatalog(SYNC_CATALOG));
+  private void mockRefresh() throws IOException {
+    when(connectionApi.getConnectionForJob(new ConnectionAndJobIdRequestBody(CONNECTION_ID, JOB_ID)))
+        .thenReturn(new ConnectionRead(CONNECTION_ID, CONNECTION_NAME, SOURCE_ID, DESTINATION_ID, SYNC_CATALOG, ConnectionStatus.ACTIVE, false, null,
+            null, null, null, null, null, null, null, null, null, null, null, null, null, null, null));
+
+    when(actorDefinitionVersionApi.resolveActorDefinitionVersionByTag(any())).thenReturn(new ResolveActorDefinitionVersionResponse(
+        UUID.randomUUID(),
+        "dockerRepo",
+        "dockerTag",
+        true));
   }
 
-  private void mockNonRefresh() throws ApiException {
-    when(featureFlagClient.boolVariation(eq(ActivateRefreshes.INSTANCE), any())).thenReturn(false);
-    when(connectionApi.getConnection(new ConnectionIdRequestBody().connectionId(CONNECTION_ID)))
-        .thenReturn(new ConnectionRead()
-            .connectionId(CONNECTION_ID)
-            .syncCatalog(SYNC_CATALOG));
+  private void mockNonRefresh() throws IOException {
+    when(connectionApi.getConnection(new ConnectionIdRequestBody(CONNECTION_ID)))
+        .thenReturn(new ConnectionRead(CONNECTION_ID, CONNECTION_NAME, SOURCE_ID, DESTINATION_ID, SYNC_CATALOG, ConnectionStatus.ACTIVE, false, null,
+            null, null, null, null, null, null, null, null, null, null, null, null, null, null, null));
+
+    when(actorDefinitionVersionApi.resolveActorDefinitionVersionByTag(any())).thenReturn(new ResolveActorDefinitionVersionResponse(
+        UUID.randomUUID(),
+        "dockerRepo",
+        "dockerTag",
+        false));
   }
 
 }
